modify tmux conf without using prefix

--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -37,19 +37,35 @@ set-option -g allow-rename off
 # mapping keys as vim
 setw -g mode-keys vi
 
+# Quit pane Alt-q
+bind -n M-q kill-pane
+
 # map Vi movement keys as pane movement keys
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-# resize panes using PREFIX H, J, K, L
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+# Switch panes Alt-vim
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Resize panes Alt H, J, K, L
+bind -n M-H resize-pane -L 5
+bind -n M-J resize-pane -D 5
+bind -n M-K resize-pane -U 5
+bind -n M-L resize-pane -R 5
+
+# Move to next or previous window
+bind -n C-M-j next-window
+bind -n C-M-k previous-window
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind | split-window -h
-bind - split-window -v
+bind -n M-\ split-window -h
+bind -n M-- split-window -v
 
+# Move current window left and right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
