--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -46,6 +46,7 @@ bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
+# ------------ Meta Key Rule All! -------------
 # Switch panes Alt-vim
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D 
@@ -59,13 +60,18 @@ bind -n M-K resize-pane -U 5
 bind -n M-L resize-pane -R 5
 
 # Move to next or previous window
-bind -n C-M-j next-window
-bind -n C-M-k previous-window
+bind -n C-M-l next-window
+bind -n C-M-h previous-window
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
 bind -n M-\ split-window -h
 bind -n M-- split-window -v
 
+# New window Alt + n
+bind -n M-n new-window
+# ------------ Meta Key Rule All! -------------
+
 # Move current window left and right
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
