--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -28,7 +28,8 @@ setw -g aggressive-resize on
 #set -g visual-activity on
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+# issue resolve for migration to tmux 3.0
+set -g mode-style bg=red,fg=green,blink
 set -g status-right '#[fg=green][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]  #(~/bin/battery)#[fg=green]]'
 
 # fix window name
@@ -64,7 +65,7 @@ bind -n C-M-l next-window
 bind -n C-M-h previous-window
 
 # use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind -n M-\ split-window -h
+bind -n M-\\ split-window -h
 bind -n M-- split-window -v
 
 # New window Alt + n
@@ -74,4 +75,3 @@ bind -n M-n new-window
 # Move current window left and right
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
-
